starting work on cells2layout

--- a/transform/cells2layout/Makefile
+++ b/transform/cells2layout/Makefile
@@ -1,6 +1,6 @@
 #-------------------------------------------------------------------------
 #
-#  Copyright (c) 2018-2020 Rajit Manohar
+#  Copyright (c) 2018 Rajit Manohar
 #
 #  This program is free software; you can redistribute it and/or
 #  modify it under the terms of the GNU General Public License
@@ -18,25 +18,17 @@
 #  Boston, MA  02110-1301, USA.
 #
 #-------------------------------------------------------------------------
-TARGETLIBS=libactpass_$(EXT).a
-TARGETINCS=passes.h
-TARGETINCSUBDIR=act
-SUBDIRS=flatten netgen cells layout booleanize state sizing
+BINARY=cells2layout.$(EXT)
 
-USEOBJS=booleanize/$(EXT)/booleanize.o \
-	netgen/$(EXT)/netlist.o \
-	netgen/$(EXT)/emit.o \
-	flatten/$(EXT)/flatten.o \
-	cells/$(EXT)/cells.o \
-	layout/$(EXT)/layout.o \
-	state/$(EXT)/statepass.o \
-	sizing/$(EXT)/sizing.o
+TARGETS=$(BINARY)
 
+OBJS=main.o
+
+SRCS=$(OBJS:.o=.cc)
 
 include $(VLSI_TOOLS_SRC)/scripts/Makefile.std
 
-$(TARGETLIBS): $(USEOBJS)
-	ar ruv $(TARGETLIBS) $(USEOBJS)
-	$(RANLIB) $(TARGETLIBS)
+$(BINARY): $(LIB) $(OBJS) $(ACTPASSDEPEND)
+	$(CXX) $(CFLAGS) $(OBJS) -o $(BINARY) $(LIBACTPASS)
 
 -include Makefile.deps
