--- a/transform/Makefile
+++ b/transform/Makefile
@@ -21,7 +21,7 @@
 #
 # Make everything, in the right order
 # 
-SUBDIRS=aflat prs2net prs2sim prs2cells v2act ext2sp adepend act2v \
+SUBDIRS=aflat prs2net prs2sim prs2cells cells2layout v2act ext2sp adepend act2v \
 	test_state
 
 include $(VLSI_TOOLS_SRC)/scripts/Makefile.std
