starting work on layout algorithm. This commit sets up some of the necessary data structures.

--- a/passes/Makefile
+++ b/passes/Makefile
@@ -28,6 +28,7 @@ USEOBJS=booleanize/$(EXT)/booleanize.o \
 	netgen/$(EXT)/emit.o \
 	flatten/$(EXT)/flatten.o \
 	cells/$(EXT)/cells.o \
+	layout/$(EXT)/color_graph.o \
 	layout/$(EXT)/layout.o \
 	state/$(EXT)/statepass.o \
 	sizing/$(EXT)/sizing.o
